--- a/src/App.css
+++ b/src/App.css
@@ -462,7 +462,7 @@ summary {
   width: 307px;
   height: 315px;
   border-bottom: 1px solid #B01316;
-
+ 
   background: #0C0B0B;
 
   border-bottom: 2px solid #E2181A;
@@ -510,10 +510,20 @@ summary {
   color: #B01316;
 }
 
-.swiper-pagination-bullet{
+.swiper-pagination-bullet {
   background: white;
 }
 
-.swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet, .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+.swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet,
+.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
   background: #E2181A;
 }
+
+
+.personal {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+
